// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Image test on android Renders Article Image with no caption 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 25,
      "width": "100%",
    }
  }
>
  <View>
    <View>
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        presentationStyle="fullScreen"
        visible={false}
      >
        <View
          style={
            Object {
              "backgroundColor": "#1D1D1B",
              "flexDirection": "column",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <svg
              height="24"
              width="24"
            >
              <g
                fill="rgba(255, 255, 255, 0.8)"
              >
                <path />
                <path
                  fill="none"
                />
              </g>
            </svg>
          </View>
          <View
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexGrow": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "rotate": "0 deg",
                      },
                      Object {
                        "perspective": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  aspectRatio={1.7777777777777777}
                  style={
                    Object {
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0&preview=true",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={
                          Object {
                            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <BVLinearGradient
                            colors={
                              Array [
                                "#F9F9F9",
                                "#EDEDED",
                              ]
                            }
                            end={
                              Object {
                                "x": -0.09302964577578221,
                                "y": 0.11488204504197774,
                              }
                            }
                            locations={
                              Array [
                                0,
                                1,
                              ]
                            }
                            start={
                              Object {
                                "x": 1,
                                "y": 0,
                              }
                            }
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </Modal>
      <View
        accessible={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <View
          aspectRatio={1.7777777777777777}
        >
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0&preview=true",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android does not render Article Image if display is not received 1`] = `
<View>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
            }
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android does not render Article Image if ratio is not received 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 25,
      "width": "100%",
    }
  }
>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
            }
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android does not render Caption on Article Image if both caption and credits are not received 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 25,
      "width": "100%",
    }
  }
>
  <View>
    <View>
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        presentationStyle="fullScreen"
        visible={false}
      >
        <View
          style={
            Object {
              "backgroundColor": "#1D1D1B",
              "flexDirection": "column",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <svg
              height="24"
              width="24"
            >
              <g
                fill="rgba(255, 255, 255, 0.8)"
              >
                <path />
                <path
                  fill="none"
                />
              </g>
            </svg>
          </View>
          <View
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexGrow": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "rotate": "0 deg",
                      },
                      Object {
                        "perspective": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  aspectRatio={1.7777777777777777}
                  style={
                    Object {
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0&preview=true",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={
                          Object {
                            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <BVLinearGradient
                            colors={
                              Array [
                                "#F9F9F9",
                                "#EDEDED",
                              ]
                            }
                            end={
                              Object {
                                "x": -0.09302964577578221,
                                "y": 0.11488204504197774,
                              }
                            }
                            locations={
                              Array [
                                0,
                                1,
                              ]
                            }
                            start={
                              Object {
                                "x": 1,
                                "y": 0,
                              }
                            }
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </Modal>
      <View
        accessible={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <View
          aspectRatio={1.7777777777777777}
        >
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0&preview=true",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android renders inline image (landscape) correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View>
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        presentationStyle="fullScreen"
        visible={false}
      >
        <View
          style={
            Object {
              "backgroundColor": "#1D1D1B",
              "flexDirection": "column",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <svg
              height="24"
              width="24"
            >
              <g
                fill="rgba(255, 255, 255, 0.8)"
              >
                <path />
                <path
                  fill="none"
                />
              </g>
            </svg>
          </View>
          <View
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexGrow": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "rotate": "0 deg",
                      },
                      Object {
                        "perspective": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  aspectRatio={1.5}
                  style={
                    Object {
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0&preview=true",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={
                          Object {
                            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <BVLinearGradient
                            colors={
                              Array [
                                "#F9F9F9",
                                "#EDEDED",
                              ]
                            }
                            end={
                              Object {
                                "x": -0.09302964577578221,
                                "y": 0.11488204504197774,
                              }
                            }
                            locations={
                              Array [
                                0,
                                1,
                              ]
                            }
                            start={
                              Object {
                                "x": 1,
                                "y": 0,
                              }
                            }
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </Modal>
      <View
        accessible={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <View
          aspectRatio={1.5}
        >
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0&preview=true",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
            }
          }
        >
          TIMES PHOTOGRAPHER JACK HILL
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android renders inline image (portrait) correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View>
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        presentationStyle="fullScreen"
        visible={false}
      >
        <View
          style={
            Object {
              "backgroundColor": "#1D1D1B",
              "flexDirection": "column",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <svg
              height="24"
              width="24"
            >
              <g
                fill="rgba(255, 255, 255, 0.8)"
              >
                <path />
                <path
                  fill="none"
                />
              </g>
            </svg>
          </View>
          <View
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexGrow": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "rotate": "0 deg",
                      },
                      Object {
                        "perspective": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  aspectRatio={0.6666666666666666}
                  style={
                    Object {
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0&preview=true",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={
                          Object {
                            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <BVLinearGradient
                            colors={
                              Array [
                                "#F9F9F9",
                                "#EDEDED",
                              ]
                            }
                            end={
                              Object {
                                "x": -0.09302964577578221,
                                "y": 0.11488204504197774,
                              }
                            }
                            locations={
                              Array [
                                0,
                                1,
                              ]
                            }
                            start={
                              Object {
                                "x": 1,
                                "y": 0,
                              }
                            }
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </Modal>
      <View
        accessible={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <View
          aspectRatio={0.6666666666666666}
        >
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0&preview=true",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          President Kennedy’s death in 1963 has spawned countless conspiracy theories
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
            }
          }
        >
          BETTMANN
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android renders primary image correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 25,
      "width": "100%",
    }
  }
>
  <View>
    <View>
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        presentationStyle="fullScreen"
        visible={false}
      >
        <View
          style={
            Object {
              "backgroundColor": "#1D1D1B",
              "flexDirection": "column",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <svg
              height="24"
              width="24"
            >
              <g
                fill="rgba(255, 255, 255, 0.8)"
              >
                <path />
                <path
                  fill="none"
                />
              </g>
            </svg>
          </View>
          <View
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexGrow": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "rotate": "0 deg",
                      },
                      Object {
                        "perspective": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  aspectRatio={1.25}
                  style={
                    Object {
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7bfd3356-be8c-11e7-8bb9-94e1372175c0.jpg?crop=1500%2C1200%2C0%2C0&preview=true",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={
                          Object {
                            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7bfd3356-be8c-11e7-8bb9-94e1372175c0.jpg?crop=1500%2C1200%2C0%2C0",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <BVLinearGradient
                            colors={
                              Array [
                                "#F9F9F9",
                                "#EDEDED",
                              ]
                            }
                            end={
                              Object {
                                "x": -0.09302964577578221,
                                "y": 0.11488204504197774,
                              }
                            }
                            locations={
                              Array [
                                0,
                                1,
                              ]
                            }
                            start={
                              Object {
                                "x": 1,
                                "y": 0,
                              }
                            }
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </Modal>
      <View
        accessible={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <View
          aspectRatio={1.25}
        >
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7bfd3356-be8c-11e7-8bb9-94e1372175c0.jpg?crop=1500%2C1200%2C0%2C0&preview=true",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7bfd3356-be8c-11e7-8bb9-94e1372175c0.jpg?crop=1500%2C1200%2C0%2C0",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingTop": 10,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          From the spreadsheet: 1 Sir Michael Fallon, Admitted placing hand on knee of journalist 15 years ago. 2 Jake Berry, announced he had a baby with a Tory aide after an amicable divorce from his wife. 3 Amber Rudd, had a relationship with Kwasi Kwarteng, who is now an aide to the chancellor. 4 Liam Fox, had to resign over breach of ministerial code after suggestions that his position had benefited his friend Adam Werritty. No allegations were of a sexual nature. 5 Stephen Crabb, sent explicit messages to young women while married. 6 Mark Garnier, admitted asking his secretary to buy sex toys. 7 Liz Truss, had affair with Tory MP Mark Field
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
            }
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Article Image test on android renders secondary image correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View>
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        presentationStyle="fullScreen"
        visible={false}
      >
        <View
          style={
            Object {
              "backgroundColor": "#1D1D1B",
              "flexDirection": "column",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <svg
              height="24"
              width="24"
            >
              <g
                fill="rgba(255, 255, 255, 0.8)"
              >
                <path />
                <path
                  fill="none"
                />
              </g>
            </svg>
          </View>
          <View
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexGrow": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "rotate": "0 deg",
                      },
                      Object {
                        "perspective": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  aspectRatio={1.5}
                  style={
                    Object {
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0&preview=true",
                        }
                      }
                      style={
                        Object {
                          "bottom": 0,
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={
                          Object {
                            "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        onLayout={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <BVLinearGradient
                            colors={
                              Array [
                                "#F9F9F9",
                                "#EDEDED",
                              ]
                            }
                            end={
                              Object {
                                "x": -0.09302964577578221,
                                "y": 0.11488204504197774,
                              }
                            }
                            locations={
                              Array [
                                0,
                                1,
                              ]
                            }
                            start={
                              Object {
                                "x": 1,
                                "y": 0,
                              }
                            }
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </Modal>
      <View
        accessible={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
      >
        <View
          aspectRatio={1.5}
        >
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0&preview=true",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <BVLinearGradient
                    colors={
                      Array [
                        "#F9F9F9",
                        "#EDEDED",
                      ]
                    }
                    end={
                      Object {
                        "x": -0.09302964577578221,
                        "y": 0.11488204504197774,
                      }
                    }
                    locations={
                      Array [
                        0,
                        1,
                      ]
                    }
                    start={
                      Object {
                        "x": 1,
                        "y": 0,
                      }
                    }
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Sebastian Schwarz, Glyndbourne’s general director, took issue with the BBC
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
            }
          }
        >
          TIMES PHOTOGRAPHER RICHARD POHLE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
